# AskDB-AI

./: .gitignore  README.md
.claude/: settings.local.json
backend/: .env.example  api.py  config.yaml  database.py  models.py  pyproject.toml
backend/query_agent/: __init__.py
backend/query_agent/config_loader/: config.py
backend/query_agent/engine/: agent.py
backend/query_agent/prompts/: prompts.py
backend/routes/: ai.py  chat.py  tables.py
frontend/: angular.json  package.json  tsconfig.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/models/: models.ts
frontend/src/app/pages/chat/: chat.component.css  chat.component.html  chat.component.ts
frontend/src/app/pages/explorer/: explorer.component.css  explorer.component.html  explorer.component.ts
frontend/src/app/services/: db.service.ts  shared-state.service.ts  sql-highlighter.service.ts
